<resources>
    <string name="app_name">ToDo-android</string>
    <string name="Connexion_Button_Validate">Valider</string>
    <string name="Connexion_View_Title">Connexion</string>
    <string name="Connexion_Hint_Username">Email</string>
    <string name="Connexion_Hint_Password">Mots de passe</string>
    <string name="Connexion_Button_Create">Creation</string>
    <string name="Connexion_Text_ForgotPassword">Mot de passe oublié</string>
    <string name="CreatedAccount_View_Title">Creation du compte</string>
    <string name="Information_view_title">Information </string>
    <string name="Information_view_paragraphe">Pour utiliser l\'application, dans un premier temps, créer un compte grace au bouton s\'inscrire, une fois le compte fait vos accéder à la page principale où vous retrouverez en haut à droite un icon outils permettant de définirla couleur de la barre en haut. vous retrouvez également en bas à droite un bouton permettant de créer une Todo liste, Définir le nom pour accéder à la page de la Todo, vous arriverez ainsi sur une page ou vous retrouverez en en haut au centre le nom de votre Todo, appuyer sur le bouton en bas pour définir vos premières taches. vous retrouverez sur votre page principale toutes vos Todo reconnaissable par leurs noms vous avez juste à cliquer dessus pour retrouver et ajouter vos taches, une connexion est demander au début de chaque lancement.</string>
    CreatedAccount_View_Title
</resources>