<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dev.CreateAccountActivity"
    android:layout_gravity="center"
    android:foregroundGravity="center"
    android:padding="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:foregroundGravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:foregroundGravity="center">

            <TextView
                android:id="@+id/MyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CreatedAccount_View_Title"
                android:layout_gravity="center"
                android:textSize="25dp"/>

            <Space
                android:layout_width="20dp"
                android:layout_height="20dp"/>



            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Connexion_Hint_Username"
                android:textAlignment="center"
                android:inputType="text"/>



            <EditText
                android:id="@+id/password"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:hint="@string/Connexion_Hint_Password"
                android:inputType="textPassword"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="10dp"/>

            <TextView
                android:id="@+id/error"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/ValidateButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="ValidateButton_Click"
                    android:text="@string/Connexion_Button_Validate"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>



</LinearLayout>